Fix horizontal scrolling in Assign Security - adjust widths and use padding instead of margins

--- a/styles/tools.css
+++ b/styles/tools.css
@@ -107,6 +107,8 @@
 
 .assignSecurityPopup-row { 
     display: flex; 
+    width: 100%;
+    box-sizing: border-box;
 }
 
 .leftUser-section h3 { 
@@ -118,8 +120,8 @@
 .leftUser-section { 
     height: 200px; 
     width: 40%; 
-    margin-left: 15px; 
     box-sizing: border-box; 
+    padding-right: 10px;
 }
 
 .leftUser-section input { 
@@ -155,8 +157,8 @@
     display: inline-block; 
     width: 40%; 
     height: 260px; 
-    margin-left: 15px; 
     box-sizing: border-box; 
+    padding-right: 10px;
 }
 
 .rightBuss-section h3 { 
@@ -168,13 +170,15 @@
 .rightBuss-section { 
     text-align: left; 
     width: 60%; 
-    margin-left: 15px; 
+    box-sizing: border-box;
+    padding-left: 15px;
 }
 
 .rightTeam-section { 
     text-align: left; 
     width: 60%; 
-    margin-left: 15px; 
+    box-sizing: border-box;
+    padding-left: 15px;
 }
 
 .rightBuss-section input { 
@@ -218,10 +222,10 @@
     display: inline-block; 
     width: 60%; 
     height: 150px; 
-    margin-left: 19px; 
     vertical-align: top; 
     box-sizing: border-box; 
     text-align: left; 
+    padding-left: 15px;
 }
 
 .leftRoles-and-teams-list-row { 
